add result block

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="result.css">
     <link rel="stylesheet" id="theme" href="modern.css">
 
     <title>Szachy</title>
